Implement the jwt middleware
